# software_patents

./: .gitignore  .pre-commit-config.yaml  .pyup.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  TODO.md  TODO.rst  download_data.py  environment.yml  matplotlibrc  prepare_data_for_project.py  pyproject.toml  pytask.ini  setup.cfg  split_csv_files.py  start_project.ps1  test_requirements.txt  tox.ini  waf.py  wscript
src/: __init__.py  config.py  wscript
src/analysis/: apply_bh_to_indicators.py  classifiers.py  replicate_results_of_bh2007.py  task_apply_bh_to_indicators.py  task_replicate_results_of_bh2007.py  test_analysis.py  transformers.py  wscript
src/data_management/: merge_indicators.py  prepare_bessen_hunt_2007.py  prepare_description.py  prepare_patents.py  prepare_summary.py  scrape_patents.py  task_merge_indicators.py  task_prepare_bessen_hunt_2007.py  task_prepare_datasets.py  test_data_management.py  wscript
src/documentation/: compare_replication.ipynb  conf.py  data.rst  index.rst  introduction.rst  paper.rst  references.rst  waf.rst  wscript
src/exploration/: Random Forest Classifier.ipynb  Sketch book.ipynb  exploration_machine_learning.ipynb  exploration_machine_learning_2.ipynb  explore_analysis.ipynb  explore_data_management.ipynb  explore_raw.ipynb  replication_thesis_machine_learning.ipynb
src/figures/: auxiliaries.py  matplotlibrc  project_dependency_graph.py  task_visualize_distribution_of_patents.py  visualize_distribution_of_patents.py  wscript
src/paper/: references.bib  task_compile_document.py  thesis.tex  wscript
src/paper/graphics/: biasvariancetradeoff.vsdx
src/report/: wscript
src/software_patents/: __init__.py  config.py
src/software_patents/analysis/: classifiers.py  task_apply_bh_to_indicators.py  task_replicate_results_of_bh2007.py  test_analysis.py  transformers.py
src/software_patents/data_management/: indicators.py  prepare_description.py  prepare_patents.py  prepare_summary.py  scrape_patents.py  task_merge_indicators.py  task_prepare_bessen_hunt_2007.py  task_prepare_datasets.py  test_data_management.py
src/software_patents/exploration/: Random Forest Classifier.ipynb  Sketch book.ipynb  exploration_machine_learning.ipynb  exploration_machine_learning_2.ipynb  explore_analysis.ipynb  explore_data_management.ipynb  explore_raw.ipynb  replication_thesis_machine_learning.ipynb
src/software_patents/figures/: auxiliaries.py  task_visualize_distribution_of_patents.py
src/software_patents/paper/: references.bib  task_compile_document.py  thesis.tex
src/software_patents/paper/graphics/: giniimpurity.vsdx  ml_flowchart.vsdx  sketch of influences.vsdx  titanic.vsdx
src/software_patents/tables/: task_table_bessen_hunt_2007_and_replication.py
src/tables/: table_bessen_hunt_2007_and_replication.py  task_table_bessen_hunt_2007_and_replication.py  wscript
