[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "software_patents"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]
requires-python = ">=3.8"
dependencies = ["pytask"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.check-manifest]
ignore = ["src/software_patents/_version.py"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools_scm]
write_to = "src/software_patents/_version.py"

[tool.mypy]
files = ["src"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "software_patents.analysis.transformers"
disallow_untyped_defs = false
ignore_errors = true

[tool.pytask.ini_options]
paths = ["src/software_patents"]

[tool.ruff]
target-version = "py38"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-ignore = [
    # Others.
    "ANN101",  # type annotating self
    "ANN102",  # type annotating cls
    "ANN401",  # flake8-annotate typing.Any
    "PD",  # pandas-vet
    "COM812",  # Comply with ruff-format.
    "ISC001",  # Comply with ruff-format.
    # Temporary
    "D103",
    "D104",
    "TCH",
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"*/test_*.py" = ["S101"]
"*/transformers.py" = ["ANN", "FBT", "D"]
"tests/*" = ["D", "ANN", "PLR2004"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.refurb]
python_version = "3.8"

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
testpaths = ["src"]
norecursedirs = [".idea", ".tox"]
filterwarnings = ["ignore:datetime.*:DeprecationWarning"]
