[project]
name = "software_patents"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]
requires-python = ">=3.8"
dependencies = [
    "pytask>=0.4.4",
    "pytask-latex>=0.4.2",
    "pytask-parallel>=0.4.1",
    "universal-pathlib>=0.2.2",
    "dask>=2024.4.1",
    "httpx>=0.27.0",
    "pandas>=2.2.2",
    "beautifulsoup4>=4.12.3",
    "matplotlib>=3.8.4",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "openpyxl>=3.1.2",
    "scikit-learn>=1.4.2",
    "requests>=2.31.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[build-system]
requires = ["hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.build.hooks.vcs]
version-file = "src/software_patents/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
exclude = ["tests"]
only-packages = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
files = ["src"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "software_patents.analysis.transformers"
disallow_untyped_defs = false
ignore_errors = true

[tool.pytask.ini_options]
paths = ["src/software_patents"]

[tool.ruff]
target-version = "py38"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-ignore = [
    # Others.
    "ANN101",  # type annotating self
    "ANN102",  # type annotating cls
    "ANN401",  # flake8-annotate typing.Any
    "PD",  # pandas-vet
    "COM812",  # Comply with ruff-format.
    "ISC001",  # Comply with ruff-format.
    # Temporary
    "D103",
    "D104",
    "TCH",
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"*/test_*.py" = ["S101"]
"*/transformers.py" = ["ANN", "FBT", "D"]
"tests/*" = ["D", "ANN", "PLR2004"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.refurb]
python_version = "3.8"

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
testpaths = ["src"]
norecursedirs = [".idea", ".tox"]
filterwarnings = ["ignore:datetime.*:DeprecationWarning"]
