[project]
name = "software_patents"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4",
    "coiled",
    "dask",
    "httpx",
    "matplotlib",
    "openpyxl",
    "pandas",
    "pytask>=0.4.4",
    "pytask-latex",
    "pytask-parallel",
    "pytest",
    "pytest-cov",
    "scikit-learn",
    "universal-pathlib>=0.2.2",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[build-system]
requires = ["hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.build.hooks.vcs]
version-file = "src/software_patents/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
exclude = ["tests"]
only-packages = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
files = ["src"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "software_patents.analysis.transformers"
disallow_untyped_defs = false
ignore_errors = true

[tool.pytask.ini_options]
paths = ["src/software_patents"]

[tool.ruff]
target-version = "py38"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-ignore = [
    # Others.
    "ANN101",  # type annotating self
    "ANN102",  # type annotating cls
    "ANN401",  # flake8-annotate typing.Any
    "PD",  # pandas-vet
    "COM812",  # Comply with ruff-format.
    "ISC001",  # Comply with ruff-format.
    # Temporary
    "D103",
    "D104",
    "TCH",
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"*/test_*.py" = ["S101"]
"*/transformers.py" = ["ANN", "FBT", "D"]
"tests/*" = ["D", "ANN", "PLR2004"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.refurb]
python_version = "3.8"

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
testpaths = ["src"]
norecursedirs = [".idea", ".tox"]
filterwarnings = ["ignore:datetime.*:DeprecationWarning"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
software_patents = { path = ".", editable = true }
