[metadata]
name = software_patents
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.6.1
include_package_data = True
zip_safe = False

[check-manifest]
ignore =
    src/_version.py
