[metadata]
name = software_patents
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.6.1
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/software_patents/_version.py
